完成日志列表和详情界面

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,5 +1,7 @@
 
 :global {
+
+
   .sider {
     height: 100vh;
     .logo {
@@ -27,4 +29,14 @@
     background-color: "red";
     text-align: center;
   }
+
+  // @media (prefers-color-scheme: light) {
+  //   .sider {
+  //     background: #2F4056;
+  //   }
+
+  //   .content {
+  //     background: #2F4056;
+  //   }
+  // }
 }
