调整代码格式

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,7 +1,4 @@
-
 :global {
-
-
   .sider {
     height: 100vh;
     .logo {
@@ -26,7 +23,7 @@
     }
   }
   footer {
-    background-color: "red";
+    background-color: 'red';
     text-align: center;
   }
 
