--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -16,15 +16,16 @@
     display: flex;
     height: 100vh;
     flex-direction: column;
+    overflow: auto;
 
     .content {
-      overflow: auto;
       flex: 1;
     }
-  }
-  footer {
-    background-color: 'red';
-    text-align: center;
+
+    footer {
+      // background-color: 'red';
+      text-align: center;
+    }
   }
 
   // @media (prefers-color-scheme: light) {
